fixed border radius and wrapped post content in a div

--- a/src/documents/styles/homepage.css
+++ b/src/documents/styles/homepage.css
@@ -127,6 +127,7 @@ body::-webkit-scrollbar  {
 #grid > li >  a > img {
 	padding:0;
 	width:100%;
+	border-top-right-radius: 3px;
 }
 #grid > li > a > header {
 	font-size:24px;
@@ -148,6 +149,7 @@ body::-webkit-scrollbar  {
 }
 #grid > li.image.double > a > header > span {
 	font-size: 50px;
+	border-top-left-radius: 3px;
 }
 #grid > li.image > a > header > span {
 	background-color: #2a2a2a;
@@ -156,6 +158,7 @@ body::-webkit-scrollbar  {
 	left: 20px;
 	top: 7px;
 	position: relative;
+	border-top-left-radius: 3px;
 }
 
 #grid > li.image > a > header > .smalltitle {
